send annotations data, receive data from python done

--- a/QnA/templates/main.html
+++ b/QnA/templates/main.html
@@ -7,6 +7,7 @@
         Hello World
         <canvas id="picture" class="drawRectCanvas" width="1000" height="1000">
         </canvas>
+        <button id="submitAnnotations" type="button"> Submit! </button>
     </body>
 </html>
 
