--- a/QnA/templates/main.html
+++ b/QnA/templates/main.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script src="{{ url_for('static', filename='script.js') }}"></script>
-    </head>
-    <body>
-        Hello World
-        <canvas id="picture" class="drawRectCanvas" width="1000" height="1000">
-        </canvas>
-        <button id="submitAnnotations" type="button"> Submit! </button>
-    </body>
-</html>
-
+{% extends "template.html" %}
