--- a/QnA/templates/editor.html
+++ b/QnA/templates/editor.html
@@ -6,8 +6,17 @@
 {% endblock %}
 
 {% block body %}
-<canvas id="picture" class="drawRectCanvas" width="1000" height="1000">
-</canvas>
+{% for i in range(documents|length) %}
+    {% set pages = documents[i][1] %}
+    {% set documentName = documents[i][0] %}
+    {% for j in range(pages | length) %}
+        {% set canvasID = "page-" + pages[j][0]|string %}
+        {% set baseImageDir = "static/" + pages[j][1].databaseName %}
+        <canvas id="{{canvasID}}" class="drawRectCanvas" width="1000" height="1000">
+        </canvas>
+        <script> prepareCanvas('{{canvasID}}', '{{baseImageDir}}'); </script>
+    {% endfor %}
+{% endfor %}
 <button id="submitAnnotations" type="button"> Submit! </button>
 <div id='debug'> </div>
 {% endblock %}
