--- a/QnA/templates/template.html
+++ b/QnA/templates/template.html
@@ -1,15 +1,33 @@
 {% extends "bootstrap/base.html" %}
 
 {% block styles %}
-    {{super()}}
+    <!-- flask-Bootstrap does not support 4.0.0, rather supports bootstrap 3.3.7-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     {% block otherStyles %}
         <!-- add custom styles here -->
     {% endblock %}
 {% endblock %}
 
 {% block scripts %}
-    {{super()}}
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     {% block otherScripts %}
         <!-- add other scripts here -->
     {% endblock %}
+{% endblock %}
+
+{% block navbar %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">QnA</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/manage">Manage</a></li>
+          <li class="nav-item"><a class="nav-link" href="/account">Account</a></li>
+          <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+        </ul>
+    </div>
+</nav>
 {% endblock %}
