--- a/QnA/templates/template.html
+++ b/QnA/templates/template.html
@@ -2,31 +2,32 @@
 
 {% block styles %}
     <!-- flask-Bootstrap does not support 4.0.0, rather supports bootstrap 3.3.7-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     {% block otherStyles %}
         <!-- add custom styles here -->
     {% endblock %}
 {% endblock %}
 
 {% block scripts %}
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     {% block otherScripts %}
         <!-- add other scripts here -->
     {% endblock %}
 {% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">QnA</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand ms-2" href="#">QnA</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/manage">Manage</a></li>
-          <li class="nav-item"><a class="nav-link" href="/account">Account</a></li>
-          <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item active ms-2"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item ms-2"><a class="nav-link" href="/manage">Manage</a></li>
+          <li class="nav-item ms-2"><a class="nav-link" href="/account">Account</a></li>
+          <li class="nav-item ms-2"><a class="nav-link" href="/logout">Logout</a></li>
         </ul>
     </div>
 </nav>
