--- a/QnA/static/manage.css
+++ b/QnA/static/manage.css
@@ -4,7 +4,6 @@
 }
 
 .previewImageContainer{
-    display: flex;
     float: left;
 }
 
@@ -23,7 +22,7 @@
 }
 
 @media only screen and (max-width: 500px){
-    #problemPage div{
+    #problemPage > div{
         width: 100%;
     }
 }
