--- a/QnA/templates/template.html
+++ b/QnA/templates/template.html
@@ -1,5 +1,10 @@
 {% extends "bootstrap/base.html" %}
 
+{% block head %}
+{{super()}}
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+{% endblock %}
+
 {% block styles %}
     <!-- flask-Bootstrap does not support 4.0.0, rather supports bootstrap 3.3.7-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
