Annotations save after switching pages

--- a/QnA/templates/main.html
+++ b/QnA/templates/main.html
@@ -6,8 +6,10 @@
 <h2 class="ms-2 mt-2"> Home </h2>
 <div class="ms-2 mt-2">
     <form method="POST" action="/uploadFiles"  enctype="multipart/form-data">
-        <label for="filepicker">Choose file(s) to upload:</label>
-        <input type="file" name="filepicker" id="filepicker" accept=".pdf,.doc,.docx" multiple>
+        <div class="form-group files">
+            <label for="filepicker">Choose file(s) to upload:</label>
+            <input type="file" class="form-control" name="filepicker" id="filepicker" accept=".pdf,.doc,.docx" multiple>
+        </div>
         <button type="submit"> Submit! </button>
     </form>
 </div>
