Added back to editor in /tag, fixed bug in handling annotations already in database

--- a/QnA/static/main.css
+++ b/QnA/static/main.css
@@ -1,7 +1,7 @@
 /* Credits to https://bootsnipp.com/snippets/DOXy4 */
 
 .files input {
-    padding: 120px 100% 85px 35%;
+    padding: 120px 0px 85px 35%;
 }
 .files { 
     position:relative
