--- a/QnA/templates/manage.html
+++ b/QnA/templates/manage.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block otherScripts %}
-<script src="{{ url_for('static', filename='manage.js') }}"></script>
+<script src="{{ url_for('static', filename='redirects.js') }}"></script>
 {% endblock %}
 
 {% block content %}
