--- a/QnA/templates/index.html
+++ b/QnA/templates/index.html
@@ -18,7 +18,10 @@
 
 {% macro render_field(field) %}
     <div>
-        {{ field.label(class_="form-check-label") }}
+        {% if field.type != "HiddenField" %}
+            {{ field.label(class_="form-check-label") }}
+        {% endif %}
+      
         {# following input autocomplete guides #}
         {% if field.id == "newPassword" or field.id == "confirm" %}
             {{ field(class_="form-control border", autocomplete="new-password", **kwargs)|safe }}
@@ -31,6 +34,7 @@
         {% else %}
             {{ field(class_="form-control border", **kwargs)|safe }}
         {% endif %}
+      
         {% if field.errors %}
         <ul class=errors>
             {% for error in field.errors %}
@@ -58,6 +62,7 @@
             {{ render_field(loginForm.username) }}
             {{ render_field(loginForm.password) }}
             {{ render_field(loginForm.remember_me) }}
+            {{ render_field(loginForm.formName) }}
             <button type="submit" class="btn btn-primary mt-2 w-100"> Sign In </button>
         </form>
         <hr>
@@ -68,6 +73,7 @@
             {{ render_field(signupForm.username) }}
             {{ render_field(signupForm.password) }}
             {{ render_field(signupForm.confirm) }}
+            {{ render_field(signupForm.formName) }}
             <button type="submit" class="btn btn-secondary mt-2 w-100"> Sign Up </button>
         </form>
     </div>
