--- a/QnA/templates/index.html
+++ b/QnA/templates/index.html
@@ -57,12 +57,13 @@
         </div>
     </div>
     <div id="loginformdiv" class="form-group"> 
-        <h3 class="text-center"> Sign In </h3>
+        <h3 class="text-center mt-2"> Sign In </h3>
         <form action="{{ url_for('root') }}" method="POST" id="loginForm" class="container">
+            {{ loginForm.hidden_tag() }}
+          
             {{ render_field(loginForm.username) }}
             {{ render_field(loginForm.password) }}
             {{ render_field(loginForm.remember_me) }}
-            {{ render_field(loginForm.formName) }}
             <button type="submit" class="btn btn-primary mt-2 w-100"> Sign In </button>
         </form>
         <hr>
@@ -70,10 +71,12 @@
         <hr>
         <h3 class="text-center"> Register </h3>
         <form action="{{ url_for('root') }}" method="POST" id="signupForm" class="container">
+            {{ signupForm.hidden_tag() }}
+          
             {{ render_field(signupForm.username) }}
             {{ render_field(signupForm.password) }}
             {{ render_field(signupForm.confirm) }}
-            {{ render_field(signupForm.formName) }}
+            {{ render_field(signupForm.remember_me) }}
             <button type="submit" class="btn btn-secondary mt-2 w-100"> Sign Up </button>
         </form>
     </div>
