--- a/QnA/static/login.css
+++ b/QnA/static/login.css
@@ -1,17 +1,15 @@
-/* login page does not inherit from main page, so we should not include 'main.css' in login page */
-/* hence there may be some repeated styles here */
-.flexcontainer{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-right: 3px;
+.flexcontainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 3px;
 }
 
-.centered{
+.centered {
     text-align: center;
 }
 
-#infoandlogin{
+#infoandlogin {
     display: table;
     width: 100%;
     min-height: 100vh;
@@ -19,14 +17,14 @@
 }
 
 /* display: table-cell makes both div heights the same */
-#loginformdiv{
+#loginformdiv {
     display: table-cell;
     width: 40%;
     min-height: 100vh;
     border: 1px solid black;
 }
 
-#infocol{
+#infocol {
     display: table-cell;
     width: 60%;
     min-height: 100vh;
@@ -43,43 +41,43 @@ hr {
     border-top: 1px solid #bdb6b6;
 }
 
-#orseparator{
+#orseparator {
     margin: 3px 0;
 }
 
-#loginformdiv form input[type=submit]{
+#loginformdiv form input[type="submit"] {
     display: block;
     margin: 0 auto;
     margin-top: 10px;
     margin-bottom: 5px;
 }
 
-#infocol img{
+#infocol img {
     width: 100%;
     visibility: hidden;
     display: none;
 }
 
-#infoImageText{
+#infoImageText {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-#infoImageText>*{
-  color: #f2f2f2;
+#infoImageText > * {
+    color: #f2f2f2;
 }
 
-@media only screen and (max-width: 750px){
-    #infoandlogin{
+@media only screen and (max-width: 750px) {
+    #infoandlogin {
         display: block;
         width: 100%;
         min-height: unset;
         padding: 1px;
     }
 
-    #infocol{
+    #infocol {
         display: block;
         width: 100%;
         min-height: unset;
@@ -92,22 +90,21 @@ hr {
         overflow-y: scroll;
     }
 
-    #infoImageText{
+    #infoImageText {
         top: 0;
         width: 50%;
         left: 50%;
         transform: translate(-50%);
     }
 
-    #infocol img{
+    #infocol img {
         display: block;
     }
 
-    #loginformdiv{
+    #loginformdiv {
         display: block;
         width: 100%;
         min-height: unset;
         border: 1px solid black;
     }
-
 }
