--- a/QnA/templates/tag.html
+++ b/QnA/templates/tag.html
@@ -34,7 +34,7 @@
     <button type="submit" id="nextImage" class="btn btn-primary mt-2 float-end me-2"> Next </button>
 </form>
 <form method="POST" action="/prevImage">
-    <button type="submit" id="prevImage" class="btn btn-primary mt-2 float-end me-2"> Prev </button>
+    <button type="submit" id="prevImage" class="btn btn-primary mt-2 float-end me-2"> Previous </button>
 </form>
 <button type="button" id="backEdit" class="btn btn-primary mt-2 float-end me-2" onclick="loadEdit({{documentID}})"> Back to Edit </button>
 {% endblock %}
